--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,6 +14,7 @@ glance = "1.1.0-alpha01"
 okhttp = "4.12.0"
 okhttpCoroutines = "1.0"
 workRuntimeKtx = "2.9.0"
+smartspacer = "1.0.3"
 
 [libraries]
 kotlinx-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
@@ -37,6 +38,7 @@ androidx-glance-material3 = { group = "androidx.glance", name = "glance-material
 squareup-okhttp = { group = "com.squareup.okhttp3", name = "okhttp", version.ref = "okhttp" }
 squareup-okhttp-coroutines = { group = "ru.gildor.coroutines", name = "kotlin-coroutines-okhttp", version.ref = "okhttpCoroutines" }
 androidx-work-runtime-ktx = { group = "androidx.work", name = "work-runtime-ktx", version.ref = "workRuntimeKtx" }
+kieronquinn-smartspacer = { group = "com.kieronquinn.smartspacer", name = "sdk-plugin", version.ref = "smartspacer" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
